--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <div class="pokemon" style="background-color: rgb(222,253,224);">
         <div class="img-container">
-          <img src="https://pokeres.bastionbot.org/images/pokemon/1.png" alt="Bulbasaur">
+          <img src="https://pokeres.bastionbot.org/images/pokemon/1.png" alt="charmander">
         </div>
         <div class="info">
           <span class="number">001</span>
