--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
       <!-- Bulbasaur es un pokemon prueba se deben borrar y traer la info de la API -->
 
-      <div class="pokemon" style="background-color: rgb(222,253,224);">
+      <!-- <div class="pokemon" style="background-color: rgb(222,253,224);">
         <div class="img-container">
           <img src="https://pokeres.bastionbot.org/images/pokemon/1.png" alt="Bulbasaur">
         </div>
@@ -21,7 +21,7 @@
           <h3 class="name">Bulbasaur</h3>
           <small class="type">Type: <span>grass</span></small>
         </div>
-      </div>
+      </div> -->
 
     <!-- Design inspired by this Dribbble shot: https://dribbble.com/shots/5611109--Pokemon -->
     <script src="script.js"></script>
