adicion comentarios en el codigo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Pokedex</h1>
     <div class="poke-container" id="poke-container">
 
-      <!-- Bulbasaur es un pokemon prueba se deben borrar y traer la info de la API -->
+    <!-- adición de cada tarjeta para los pokemón -->
 
       
     </div>
